--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<h1>Selamat Datang di Progate</h1>
-<h2>Tentang HTML</h2>
-<p>HTML=HyperText Markup Language</p>
-<a href="https://matematika.uin-malang.ac.id">official Website Matematika</a> 
-<img src="https://progate.com/images/html/beginner/wanko.jpg">
-<img src="https://progate.com/images/html/beginner/school.jpg">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <header>
+</html>
