--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Progate</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  </head>
-  <body>
-    <header>
-</html>
+<div class="contact-form">
+        <h3 class="section-title">Hubungi kami</h3>
+        <form action="/action_page.php">
+          <label for="fname">*First name:</label>
+          <input type="text" id="fname" name="fname" value=""><br>
+          <label for="lname">*Last name:</label>
+          <input type="text" id="lname" name="lname" value=""><br>
+          <label for="lname">*alamat:</label>
+          <input type="text" id="lname" name="lname" value=""><br>
+          <label for="lname">*Nomor WA:</label>
+          <input type="text" id="lname" name="lname" value=""><br>
+          <label for="lname">*Instagram:</label>
+          <input type="text" id="lname" name="lname" value=""><br>
+          <p>*Gender:</p>
+          <input type="radio" id="html" name="fav_language" value="Man"> 
+          <label for="Man">Man</label>
+          <input type="radio" id="css" name="fav_language" value="Woman">
+          <label for="Woman">Woman</label><br>
+          <label for="tanggal">*tanggal:</label>
+          <input type="date" id="tanggal" name="tanggal"><br>
+          <label for="lname">*Address:</label>
+          <input type="text" id="lname" name="lname" value=""><br>
+          <label for="lname">*Upload Photo: </label><br>
+          <input type="submit" value="Choose File"> No file chosen <br>
+          <label for="ftextarea">*Description: </label><br>
+          <textarea></textarea><br>
+          <label for="ftextarea">*Pesan: </label><br>
+          <textarea></textarea><br>
+        </form>
+        <p>*Bidang wajib diisi.</p>
+        <input type="submit" value="Kirim">
+      </div>
+    </div>
+
