--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <p>Kami menawarkan perlengkapan outdoor untuk mendukung foto kalian menjadi lebih aesthetic</p>
         <p>Lokasi : Barat Sungai, Kotakusuma, Sangkapura, Pulau Bawean</p>
         <div class="btn-wrapper">
-          <a href="#" class="btn Lokasi">Lokasi</a>
+          <a href="https://maps.app.goo.gl/JfK7p2nmDK3JtE9d9" class="btn Lokasi">Lokasi</a>
           <p>Hubungi Kami di :</p>
-          <a href="#" class="btn Instagram"><span class="fa fa-Instagram"></span>Instagram</a>
-          <a href="#" class="btn WhatsApp1"><span class="fa fa-WhatsApp1"></span>WA Admin 1</a>
-          <a href="#" class="btn WhatsApp2"><span class="fa fa-WhatsApp2"></span>WA Admin 2</a>
-          <a href="#" class="btn WhatsApp3"><span class="fa fa-WhatsApp3"></span>WA Admin 3</a>
+          <a href="https://instagram.com/picnic.paradise_?igshid=MzRlODBiNWFlZA==" class="btn Instagram"><span class="fa fa-Instagram"></span>Instagram</a>
+          <a href="https://wa.me/(6282229257929)" class="btn WhatsApp1"><span class="fa fa-WhatsApp1"></span>WA Admin 1</a>
+          <a href="https://wa.me/(6281390157519)" class="btn WhatsApp2"><span class="fa fa-WhatsApp2"></span>WA Admin 2</a>
+          <a href="https://wa.me/(6283846767274)" class="btn WhatsApp3"><span class="fa fa-WhatsApp3"></span>WA Admin 3</a>
         </div>
       </div>
     </div>
