--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="">
+              <img src="https://drive.google.com/file/d/1nXdj0EahAl72ARMGqcV70Q12xVGx3SaX/view?usp=drivesdk.png">
             </div>
             <p class="txt-contents">Kami menyediakan 5 sesi dengan rentan waktu 10jam/sesinya</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="">
+              <img src="https://drive.google.com/file/d/1nOLQ0FQhV_djd6cB8OTHwvlWrxltbAnY/view?usp=drivesdk.png">
             </div>
             <p class="txt-contents">Rules atau tatacara untuk menyewa produk di kami</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="">
+              <img src="https://drive.google.com/file/d/1nP_9GNPFNb5l09UsajccxaGRky7c7py3/view?usp=drivesdk.png">
             </div>
             <p class="txt-contents">Peraturan tersebut harus dipatuhi oleh penyewa</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="">
+              <img src="https://drive.google.com/file/d/1nZB0yzAVHKHo9gqqcTnP4yOxlQznVUfr/view?usp=drivesdk.png">
             </div>
             <p class="txt-contents">Untuk harga sewa lebih dari 1 item akan ada potongan harga</p>
           </div>
@@ -65,7 +65,7 @@
           <h2>Ingin foto-foto jadi kece dan aesthetic?</h2>
           <h3>Ayo , sewa perlengkapan outdoor di kami!</h3>
         </div>
-        <span class="btn message">Pesan Sekarang!</span>
+        <a href="https://linktr.ee/picnic.paradise_"<span class="btn message">Pesan Sekarang!</span></a>
       </div>
     </div>
     
@@ -78,15 +78,15 @@
       <div class="contents">
         <h3 class="section-title"></h3>
         <div class="contents-item">
-          <img src="">
+          <img src="https://drive.google.com/file/d/1nfSEZHc-58tSe8--0z04Uim4V_uI6b98/view?usp=drivesdk.png">
           <p>Tripod 160cm</p>
         </div>
         <div class="contents-item">
-          <img src="">
+          <img src="https://drive.google.com/file/d/1niOB1DYd8RZVSMtTvV9pNUFYKaT5Ism1/view?usp=drivesdk.png">
           <p>Meja Lipat</p>
         </div>
         <div class="contents-item">
-          <img src="">
+          <img src="https://drive.google.com/file/d/1neXdlL17NtrDMxG03BxCeDG5P4AP6Tbu/view?usp=drivesdk.png">
           <p>Kursi Lipat</p>
         </div>
       </div>
